src/test/ui/issues/10000-19999/issue-11192.stderr
error[E0502]: cannot borrow `*ptr` as immutable because it is also borrowed as mutable
  --> $DIR/issue-11192.rs:20:10
   |
LL |     let mut test = |foo: &Foo| {
   |                    ----------- mutable borrow occurs here
LL |         println!("access {}", foo.x);
LL |         ptr = box Foo { x: ptr.x + 1 };
   |                            --- first borrow occurs due to use of `ptr` in closure
...
LL |     test(&*ptr);
   |     ---- ^^^^^ immutable borrow occurs here
   |     |
   |     mutable borrow later used by call

error: aborting due to previous error

For more information about this error, try `rustc --explain E0502`.
